apps/base/voyager/voyager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voyager
  namespace: default
  labels:
    app: voyager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voyager
  template:
    metadata:
      labels:
        app: voyager
    spec:
      automountServiceAccountToken: false
      containers:
      - name: voyager
        image: ghcr.io/aeharding/voyager:2.49.0 # {"$imagepolicy": "flux-system:voyager-image"}
        ports:
        - containerPort: 5314
        # securityContext:
        # readOnlyRootFilesystem: true
        # runAsGroup: 911
        # runAsNonRoot: true
        # runAsUser: 911
        # allowPrivilegeEscalation: false
        # capabilities:
        # drop:
        # - ALL
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: voyager-svc
  namespace: default
spec:
  selector:
    app: voyager
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5314
