apps/base/voyager/voyager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voyager-ingress
  namespace: default
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/issuer: nohost-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/ingress-hostname-source: defined-hosts-only 
    external-dns.alpha.kubernetes.io/target: nohost.network
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  rules:
  - host: voyager.nohost.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: voyager-svc
            port:
              number: 80
  tls:
  - hosts:
    - voyager.nohost.network
    secretName: voyager-cert

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wefwef-ingress
  namespace: default
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/issuer: nohost-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/ingress-hostname-source: defined-hosts-only 
    external-dns.alpha.kubernetes.io/target: nohost.network
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  rules:
  - host: wefwef.nohost.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: voyager-svc
            port:
              number: 80
  tls:
  - hosts:
    - wefwef.nohost.network
    secretName: wefwef-cert
